:bug: add repository name

--- a/public/404.html
+++ b/public/404.html
@@ -1,4 +1,4 @@
-<meta http-equiv="refresh" content="0; URL=/repository-name/" />
+<meta http-equiv="refresh" content="0; URL=/JobMatch/" />
 <script type="text/javascript">
   var pathSegmentsToKeep = 1;
 
